Bug 1348841 - switch on blocking mode for named-pipe only on windows; r=bagder,mayhemer

MozReview-Commit-ID: Gvm88q26VHK

--HG--
extra : rebase_source : 188b65cba6b4ecb243b4b6ab8c55733f82217567